# sprog

./: README.md  pyproject.toml
src/sprog/: __init__.py  __main__.py  bifrost.py  fastani.py  genome_download.py  gtdb.py  mash.py  sample.py  sample_set.py  tree.py  utils.py
src/sprog/tasks/: __init__.py  build_all_samples_unitigs.py  fastani_all.py  get_data.py  make_probes.py  mash_all.py  mykrobe_from_gtdb.py  per_sample_presence.py  sim_perfect_reads.py
tests/: bifrost_test.py  fastani_test.py  genome_download.py  gtdb_test.py  mash_test.py  sample_set_test.py  sample_test.py  tree_test.py  utils_test.py
tests/data/: gtdb.make_mykrobe_files.expect_manifest.tsv  gtdb.make_mykrobe_files.expect_tree.tsv  gtdb.make_mykrobe_files.tsv
